--- a/src/html/mapasmentais.html
+++ b/src/html/mapasmentais.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/mapasmentais.css">
     <title>Mapas Mentais - Bio Ativa</title>
 </head>
 <body>
